@@ -1,5 +1,12 @@
 2008-07-15  Daniel Jacobowitz  <dan@codesourcery.com>
 
+	* block.c (block_function): Renamed to ...
+	(block_linkage_function): ... this.  All callers changed.
+	* block.h (block_function): Renamed to ...
+	(block_linkage_function): ... this.
+
+2008-07-15  Daniel Jacobowitz  <dan@codesourcery.com>
+
 	* frame.c (frame_unwind_id): Renamed to ...
 	(frame_unwind_caller_id): ... this.  All callers updated.
 	(frame_pc_unwind): Renamed to ...
